<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Schedule">

    <EditText
        android:id="@+id/edtTarget"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="top"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:hint="@string/target"
        android:inputType="textMultiLine"
        android:minHeight="35dp" />

    <ListView
        android:id="@+id/listSchedule"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:listSelector="@color/teal_200" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:onClick="ClickAdd"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Save"
            android:onClick="ClickSave"
            android:layout_marginEnd="30dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Clear"
            android:onClick="ClickClear"
            android:layout_marginStart="30dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>